# web-reader

./: .gitignore  .mise.toml  README.md  pyproject.toml  setup.py
src/webreader/: __init__.py
webreader/: __init__.py
