[project]
name = "webreader"
version = "0.1.0"
description = "Convert web articles to audio"
authors = [
    { name = "Yang Zhang", email = "yang@users.noreply.github.com" }
]
dependencies = [
    'feedgen==0.9.0',
    'flask==2.2.2',
    'flask-cors==3.0.10',
    'ftfy==6.2.0',
    'nltk==3.7',
    'path.py==7.2',
    'pq==1.9.0',
    'psycopg2==2.9.5',
    # The 'security' extra is to deal with SSL errors.  See
    # <http://stackoverflow.com/a/30438722/43118>.
    'requests[security]==2.28.1',
    'sqlalchemy==1.4.44',
    'python-slugify==1.1.4',
    'trafilatura==1.4.0',
    'werkzeug==2.2.2'
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
web-reader = 'webreader:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/webreader"]
